[gd_scene load_steps=25 format=3 uid="uid://crenkowcnm0ft"]

[ext_resource type="Script" uid="uid://bmmpt8v6ko2ko" path="res://barkley2/scenes/Objects/_interactiveActor/_eastelands/_industrialPark/o_moriarty01.gd" id="1_vjk1c"]
[ext_resource type="Script" uid="uid://brqjwvhoi8eux" path="res://barkley2/resources/B2_Cinema/B2_Script_Legacy.gd" id="2_7238y"]
[ext_resource type="Texture2D" uid="uid://6ge60jsucg6j" path="res://barkley2/assets/b2_original/images/merged/s_moriarty01.png" id="2_mm0kw"]

[sub_resource type="Resource" id="Resource_1xywd"]
script = ExtResource("2_7238y")
original_script = "IF figbottomQuest == 5 | GOTO | FIG5
IF figbottomQuest == 6 | GOTO | FIG6   
IF figbottomQuest == 9 | GOTO | FIG9   
IF moriartyArrest != 1 | GOTO | NOT_ARRESTED
    
FIG5
DIALOG | Moriarty | `w1`Meat... meat on the bone... meat on the bone...`w0`
DIALOG | P_NAME   | Um, are you uh... Morrison?
DIALOG | Moriarty | `w1`Moriarty... Flesh... you have... tender... delicious... flesh...`w0`
DIALOG | P_NAME   | It's one of the symptoms of being alive, I guess. I've got a couple questions for you about the missing junk prospector Figbottom. Think you've got the time?
DIALOG | Moriarty | `w1`Figbottom... I know that guy... I saw him digging around in the trash with his buddy a couple days ago... His friend looked too gristly but Figbottom... Figbottom looked perfect... they found this thing in the trash, a jerkin... they fought over the jerkin but in the end Figbottom took it... but today his friend is wearing it...`w0`
KNOW   | knowIllicitIndustrialActivity | 1
DIALOG | P_NAME   | What the shuck... Suresh didn't mention that to me. I've got one more question for you, Moriarty. Are you uh... eating a glove?
DIALOG | Moriarty | `w1`Meat on the bone... gotta get that... meat on the bone...`w0`
DIALOG | P_NAME   | I sincerely hope that's just a glove you picked up off the ground and not Figbottom's hand. I'll be back if I've got anymore questions.
DIALOG | Moriarty | `w1`Meat....... on the bone...`w0`
QUEST  | figbottomQuest = 6

FIG6
DIALOG | Moriarty | `w1`You've got... meat... meat on the bone... why don't you spend some... time with me...`w0`

FIG9
DIALOG | Moriarty | `w1`Soft, pliant flesh, still warm, the cruor still wet... chewy tendons and sinews, brittle bones snapping under compaction, giving way to succulent marrow... meat on the bone... meat on the bone...`w0`

NOT_ARRESTED
DIALOG | Moriarty | `w1`Meat on the bone... meat on the bone... gotta get that meat on the bone...`w0`"
metadata/_custom_type_script = "uid://brqjwvhoi8eux"

[sub_resource type="AtlasTexture" id="AtlasTexture_7238y"]
atlas = ExtResource("2_mm0kw")
region = Rect2(0, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xywd"]
atlas = ExtResource("2_mm0kw")
region = Rect2(31, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6fv5"]
atlas = ExtResource("2_mm0kw")
region = Rect2(62, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgtoo"]
atlas = ExtResource("2_mm0kw")
region = Rect2(93, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_iibjf"]
atlas = ExtResource("2_mm0kw")
region = Rect2(124, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_eks7d"]
atlas = ExtResource("2_mm0kw")
region = Rect2(155, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7yft"]
atlas = ExtResource("2_mm0kw")
region = Rect2(186, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n8q4"]
atlas = ExtResource("2_mm0kw")
region = Rect2(217, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i08j"]
atlas = ExtResource("2_mm0kw")
region = Rect2(248, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewe8g"]
atlas = ExtResource("2_mm0kw")
region = Rect2(279, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_onq0v"]
atlas = ExtResource("2_mm0kw")
region = Rect2(310, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_7axcw"]
atlas = ExtResource("2_mm0kw")
region = Rect2(341, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mkif"]
atlas = ExtResource("2_mm0kw")
region = Rect2(372, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_kea4v"]
atlas = ExtResource("2_mm0kw")
region = Rect2(403, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdyxk"]
atlas = ExtResource("2_mm0kw")
region = Rect2(434, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbx46"]
atlas = ExtResource("2_mm0kw")
region = Rect2(465, 0, 31, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yse1"]
atlas = ExtResource("2_mm0kw")
region = Rect2(496, 0, 31, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_ghrsy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7238y")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7238y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xywd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6fv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgtoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iibjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eks7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7yft")
}],
"loop": false,
"name": &"drool",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n8q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i08j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewe8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onq0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7axcw")
}],
"loop": false,
"name": &"hiccup1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mkif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kea4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdyxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbx46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yse1")
}],
"loop": false,
"name": &"hiccup2",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_j6fv5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3aykv"]
size = Vector2(20, 36)

[node name="o_moriarty01" type="CharacterBody2D" node_paths=PackedStringArray("mouse_detection_area", "ActorAnim", "ActorCol")]
script = ExtResource("1_vjk1c")
mouse_detection_area = NodePath("ActorInteract")
cutscene_script = SubResource("Resource_1xywd")
ActorAnim = NodePath("ActorAnim")
ActorCol = NodePath("ActorCol")
can_move_around = false

[node name="ActorAnim" type="AnimatedSprite2D" parent="."]
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_ghrsy")
centered = false
offset = Vector2(-15, -33)
metadata/default = {
"bbox_bottom": "40",
"bbox_left": "3",
"bbox_right": "33",
"bbox_top": "28",
"frames": ["images\\s_moriarty01_0.png", "images\\s_moriarty01_1.png", "images\\s_moriarty01_2.png", "images\\s_moriarty01_3.png", "images\\s_moriarty01_4.png", "images\\s_moriarty01_5.png", "images\\s_moriarty01_6.png", "images\\s_moriarty01_7.png", "images\\s_moriarty01_8.png", "images\\s_moriarty01_9.png", "images\\s_moriarty01_10.png", "images\\s_moriarty01_11.png", "images\\s_moriarty01_12.png", "images\\s_moriarty01_13.png", "images\\s_moriarty01_14.png", "images\\s_moriarty01_15.png", "images\\s_moriarty01_16.png"],
"height": "38",
"name": "s_moriarty01",
"width": "31",
"xorig": "15",
"yorigin": "33"
}

[node name="ActorCol" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_j6fv5")

[node name="ActorInteract" type="Area2D" parent="."]
position = Vector2(0, -11)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActorInteract"]
shape = SubResource("RectangleShape2D_3aykv")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="animation_finished" from="ActorAnim" to="." method="_on_actor_anim_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
